<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cmd_vel_mux</name>
  <version>0.12.1</version>
  <description>
     A multiplexer for command velocity inputs. Arbitrates incoming cmd_vel messages from several topics,
     allowing one topic at a time to command the robot, based on priorities. It also deallocates current
     allowed topic if no messages are received after a configured timeout. All topics, together with their
     priority and timeout are configured through a YAML file, that can be reload at runtime.
  </description>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/kobuki-base/cmd_vel_mux</url>
  <url type="repository">https://github.com/kobuki-base/cmd_vel_mux</url>
  <url type="bugtracker">https://github.com/kobuki-base/cmd_vel_mux/issues</url>
  <author>ximenzi</author>
  <author email="ximenzi@nus-iss.com">ximenzi</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rcpputils</depend>
  <depend>std_msgs</depend>

  <!-- <test_depend>ament_cmake_copyright</test_depend> -->
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ros_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
