<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rf2o_laser_odometry</name>
  <version>0.1.0</version>
  <description>
    Estimation of 2D odometry based on planar laser scans. Useful for mobile robots with innacurate base odometry.
    For full description of the algorithm, please refer to:
    Planar Odometry from a Radial Laser Scanner. A Range Flow-based Approach. ICRA 2016
    Available at: http://mapir.isa.uma.es/mapirwebsite/index.php/mapir-downloads/papers/217
  </description>

  <maintainer email="jgmonroy@uma.es">Javier G. Monroy</maintainer>
  <maintainer email="marianojt@uma.es"> Mariano Jaimez</maintainer>
  <maintainer email="jgmonroy@uma.es"> Javier G. Monroy</maintainer>
  <license>GPL v3</license> 

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>


  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>  
  <depend>eigen</depend>

  <depend>sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
